plugins {
	id 'java'
	id 'groovy'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.asciidoctor.jvm.convert' version '3.3.2'
}

group = 'com.orv'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'

	// Database
	runtimeOnly 'org.postgresql:postgresql:42.6.0'

	// test
	testImplementation 'org.testcontainers:testcontainers'
	testImplementation 'org.testcontainers:postgresql'
	testImplementation 'org.testcontainers:junit-jupiter'

	// .env loader
	implementation "me.paulschwarz:spring-dotenv:3.0.0"

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly('io.jsonwebtoken:jjwt-jackson:0.11.5')

	// REST Docs
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'

	// Flyway
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-database-postgresql'

	// AWS
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	// For FFmpeg Frame Grabber
	implementation 'org.bytedeco:javacv:1.5.11'
	implementation 'org.bytedeco:javacv-platform:1.5.11'

	// Quartz
	implementation 'org.springframework.boot:spring-boot-starter-quartz'

	// Monitoring
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'
}

ext {
	snippetsDir = file("build/generated-snippets")
}

tasks.named('test') {
	useJUnitPlatform()
	outputs.dir snippetsDir
}

asciidoctor {
	inputs.dir snippetsDir
	dependsOn test  // 테스트 후에 Asciidoctor가 실행되도록 설정
	sources {
		include '**/*.adoc'
	}
	attributes(
			'snippets': snippetsDir.toString()
	)
	outputDir = layout.buildDirectory.dir("asciidoc/html5").get().asFile
}

task copyDocs(type: Copy) {
	from layout.buildDirectory.dir("asciidoc/html5").get().asFile
	into file("src/main/resources/static/docs")
}

bootJar {
	dependsOn copyDocs
}

bootRun {
	dependsOn copyDocs
}

processResources {
	dependsOn copyDocs
}